--- a/Dev/index.html
+++ b/Dev/index.html
@@ -16,13 +16,13 @@
             
                 <h2 class="sec">
                 <section >
-                    <a href="#search-engine-optimization">Search Engine Optimization</a>
+                    <a href="search-engine-optimization">Search Engine Optimization</a>
                     </section>
                 <section>
-                    <a href="#online-reputation-management">Online Reputation Management</a>
+                    <a href="online-reputation-management">Online Reputation Management</a>
                 </section>
                 <section>
-                    <a href="#social-media-marketing">Social Media Marketing</a>
+                    <a href="social-media-marketing">Social Media Marketing</a>
                 </section>
             </h2>
         </div>
@@ -57,21 +57,21 @@
         <aside class="benefits">
             <div class="benefit-lead">
                 <h3>Lead Generation</h3>
-                <img src="./assets/images/lead-generation.png" alt="lead-generation"/>
+                <img src="./css/images/lead-generation.png" alt="lead-generation"/>
                 <p>
                     Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.
                 </p>
             </div>
             <div class="benefit-brand">
                 <h3>Brand Awareness</h3>
-                <img src="./assets/images/brand-awareness.png" alt="brand awareness">
+                <img src="./css/images/brand-awareness.png" alt="brand awareness">
                 <p>
                     Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.
                 </p>
             </div>
             <div class="benefit-cost">
                 <h3>Cost Management</h3>
-                <img src="./assets/images/cost-management.png" alt="cost management">
+                <img src="./css/images/cost-management.png" alt="cost management">
                 <p>
                     As the search ranking for your business increases, your advertising costs decrease, and you no longer need to advertise your page.
                 </p>
